# tiralabra

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: dijkstra.py  dijkstra_test.py  graph.py  heap.py  ida_star.py  index.py
src/algorithms/: dijkstra.py  ida_star.py
src/maps/: Map_20.map  Map_5.map
src/maps/perf_test_maps/: map2.map  map3.map  map4.map
src/services/: ui_logic.py
src/tests/: dijkstra_test.py  dijkstra_test_all_cases.py  heap_test.py  ida_star_test.py  ui_logic_test.py
src/tests/performance_tests/: dijkstra_performance_test.py  main_perf_test.py
src/ui/: ui.py
src/util/: graph.py  heap.py
